--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,51 @@
 site_name: Android Programming
+site_url: https://profdenis.github.io/appdev2_doc
+repo_name: profdenis/appdev2_doc
+repo_url: https://github.com/profdenis/appdev2_doc
 
 theme:
-  name: readthedocs
-  locale: fr
+  name: material
+  locale: en
+  language: en
   color_mode: auto
   user_color_mode_toggle: true
+  icon:
+    repo: fontawesome/brands/github
+  features:
+    - content.code.copy
+    - content.code.select
+    - navigation.tabs
+    - navigation.tabs.sticky
+    - navigation.sections
+    - navigation.expand
+    - navigation.path
+    - navigation.top
+    - navigation.footer
+    - search.suggest
+    - search.highlight
+  palette:
+    # Palette toggle for automatic mode
+    - media: "(prefers-color-scheme)"
+      toggle:
+        icon: material/brightness-auto
+        name: Switch to light mode
+
+    # Palette toggle for light mode
+    - media: "(prefers-color-scheme: light)"
+      primary: teal
+      scheme: default
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - media: "(prefers-color-scheme: dark)"
+      primary: teal
+      scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to system preference
+
 
 extra_css:
   - style.css
@@ -15,7 +56,12 @@ markdown_extensions:
       permalink: true
     sane_lists: { }
     admonition: { }
-    codehilite: { }
+    pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+    pymdownx.inlinehilite: { }
+    pymdownx.snippets: {}
     pymdownx.superfences: { }
     pymdownx.fancylists: { }
     pymdownx.saneheaders: { }
@@ -36,3 +82,4 @@ plugins:
         puml_url: https://www.plantuml.com/plantuml/
         theme:
           enabled: false
+    - search: {}
